--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,25 @@
   flex-direction: column;
 }
 
+#employee-login-page {
+  background-color: #36393E;
+  display: flex;
+  height: 100vh;
+  width: 100vw;;
+
+}
+
+#employee-list-content {
+    display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  text-align: center;
+  background-color: #1E2124;
+  height:90vw;
+  width:80vw;
+  border-radius: 10px;
+}
+
 #side-nav {
   display:flex;
 
