--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   background-color: #36393E;
   display: flex;
   height: 100vh;
-  width: 100vw;;
+  /* width: 100vw;; */
   
 }
 
@@ -43,6 +43,17 @@
 #tasks {
   flex-direction: column;
 }
+ 
+.task-card {
+  background-color: #36393E;
+  border-radius: 10px;
+  display: flex;
+  margin: 1em;
+}
+
+.task-card p {
+  margin: 5px;
+}
 
 #employee-login-page {
   background-color: #36393E;
@@ -53,7 +64,7 @@
 }
 
 #employee-list-content {
-    display: flex;
+  display: flex;
   flex-direction: column;
   /* justify-content: center; */
   text-align: center;
@@ -61,6 +72,12 @@
   height:90vw;
   width:80vw;
   border-radius: 10px;
+}
+
+.employee-card {
+  background-color: #36393E;
+  border-radius: 10px;
+  margin: 1em;
 }
 
 #side-nav {
@@ -89,9 +106,21 @@
 
 #top-nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 80vw;
   height: 5em;
   align-items: center;
   
+}
+
+#nav-name {
+  margin: 1em;
+}
+
+#nav-stuff {
+  display: flex;
+}
+
+#nav-stuff > p, Button{
+  margin: 1em;
 }
