--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,21 @@
   flex-direction: column;
 }
 
+.garden-card {
+  background-color: #36393E;
+  border-radius: 10px;
+  display: flex;
+  margin: 1em;
+}
+
+.garden-card p {
+  margin: 5px;
+}
+
+.garden-card:hover {
+  background-color: #3f4246;
+}
+
 #task-page {
   background-color: #36393E;
   display: flex;
@@ -67,17 +82,6 @@
 #tasks {
   flex-direction: column;
 }
- 
-.garden-card {
-  background-color: #36393E;
-  border-radius: 10px;
-  display: flex;
-  margin: 1em;
-}
-
-.garden-card p {
-  margin: 5px;
-}
 
 .task-card {
   background-color: #36393E;
@@ -88,6 +92,10 @@
 
 .task-card p {
   margin: 5px;
+}
+
+.task-card:hover {
+  background-color: #3f4246;
 }
 
 #employee-login-page {
@@ -134,9 +142,13 @@
   margin-top: 2em;
   text-align: center;
   width:9em;
-  height:10em;
+  height:3em;
   background-color:#595d61;
   border-radius: 10px;
+}
+
+.side-nav-card:hover {
+  background-color: #3f4246;
 }
 
 #top-nav {
