--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Neuton&family=Varela+Round&display=swap');
 
-p {
+p, h1 {
   font-family: 'Varela Round', sans-serif;
 }
 
@@ -31,8 +31,6 @@ p {
   display: flex;
   height: 100vh;
   /* width: 100vw;; */
-  
-
 }
 
 #garden-list-content {
@@ -41,8 +39,8 @@ p {
   /* justify-content: center; */
   text-align: center;
   background-color: #1E2124;
-  height:90vw;
-  width:80vw;
+  height:86vh;
+  width:86vw;
   border-radius: 10px;
 }
 
@@ -69,8 +67,7 @@ p {
   background-color: #36393E;
   display: flex;
   height: 100vh;
-  width: 100vw-10em;;
-  
+  width: 100vw;
 }
 
 #task-list-content {
@@ -79,8 +76,8 @@ p {
   /* justify-content: center; */
   text-align: center;
   background-color: #1E2124;
-  height:90vh;
-  width:100%;
+  height:86vh;
+  width:86vw;
   border-radius: 10px;
 }
 
@@ -124,8 +121,8 @@ p {
   /* justify-content: center; */
   text-align: center;
   background-color: #1E2124;
-  height:90vw;
-  width:80vw;
+  height:86vh;
+  width:86vw;
   border-radius: 10px;
 }
 
@@ -133,6 +130,10 @@ p {
   background-color: #36393E;
   border-radius: 10px;
   margin: 1em;
+}
+
+.employee-card:hover {
+  background-color: #3f4246;
 }
 
 #side-nav {
